<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Party Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblMaleGuests">How many male guests?</string>
    <string name="lblFemaleGuests">How many female guests?</string>
    <string name="lblPartyLen">Party length</string>
    <string name="btnCalculate">Calculate!</string>
    <string name="lblHours">hours</string>
    <string name="title_activity_party_calculator_result">PartyCalculatorResult</string>
    <string name="intro_text">The party calculator will work out how much drink and food to buy for your party.</string>
    <string name="sel_party_type">Change party type</string>
    <string name="choices_title">Select party type</string>
    <string name="party_type_text">Current party type: </string>
    <string name="party_type_button_text">CurrParty</string>

    <string-array name="party_types">
        <item>Drinks only</item>
        <item>BBQ Party</item>
        <item>Fondue Party</item>
        <item>Dinner Party</item>
    </string-array>

    <string name="lbl_reset">Reset</string>
    <string name="lbl_intensity_pref">Party Intensity</string>
    <string name="intensity_summary">How hard are you going to party?</string>

    <string-array name="intensity_key">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="intensity_val">
        <item>0.7</item>
        <item>1</item>
        <item>1.3</item>
    </string-array>

    <string name="intensity_pref_key">intensity_pref_key</string>

</resources>