<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:stretchColumns="1,2,3" >

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="14dp"
            android:text="@string/intro_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" >
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party_type_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight=".3" />

        <Button
            android:id="@+id/buttonPartyType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party_type_button_text"
            android:layout_weight=".3"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" >

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".65"
            android:text="@string/lblMaleGuests"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/maleGuestsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".65"
            android:text="@string/lblFemaleGuests"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/femaleGuestsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/beerResultTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/lblPartyLen"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/partyLengthSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:progress="10" />

        <EditText
            android:id="@+id/partyLengthEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="number"
            android:longClickable="false" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical|top"
            android:layout_weight=".2"
            android:text="@string/lblHours" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#dd5566"
            android:text="@string/btnCalculate"
            android:textColor="#111111" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_weight="1">
    </TableRow>

</TableLayout>